fix truncate text, user avatar and adverts

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,6 +17,8 @@ body {
         img {
           min-width: 100%;
           max-width: 100%;
+          min-height: 100%;
+          background: white;
         }
       }
       .profile {
